--- a/Segundo/Proyecto Intermodular II/005-Actividades profesionales/003-Área comercial con gestión de transacciones por Internet/002-Ejercicios/presentations/001-materiales-de-marketing-y-comunicacion/05-organizacion-del-plan-de-difusion-de-materiales-publipromocionales-e-informativos__04-tipos-de-calendarios-de-inserciones..qwen2.5-coder_7b.html
+++ b/Segundo/Proyecto Intermodular II/005-Actividades profesionales/003-Área comercial con gestión de transacciones por Internet/002-Ejercicios/presentations/001-materiales-de-marketing-y-comunicacion/05-organizacion-del-plan-de-difusion-de-materiales-publipromocionales-e-informativos__04-tipos-de-calendarios-de-inserciones..qwen2.5-coder_7b.html
@@ -108,4 +108,335 @@
     </ul>
 </section>
 
-<section class="slide
+<section class="slide">
+    <h2>Calendario de análisis</h2>
+    <ul>
+        <li>Evaluación del rendimiento de las campañas</li>
+        <li>Ejemplo: Medición de la eficacia de publicidad en línea</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de recursos</h2>
+    <ul>
+        <li>Gestión del presupuesto y los recursos disponibles</li>
+        <li>Ejemplo: Planificación de inversiones en publicidad</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento</h2>
+    <ul>
+        <li>Monitoreo del progreso y ajustes necesarios</li>
+        <li>Ejemplo: Ajuste de estrategias publicitarias según el rendimiento</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de evaluación</h2>
+    <ul>
+        <li>Revisión periódica de la eficacia del plan de difusión</li>
+        <li>Ejemplo: Evaluación anual de la estrategia publicitaria</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de innovación</h2>
+    <ul>
+        <li>Programación de nuevas ideas y estrategias</li>
+        <li>Ejemplo: Innovación en la publicidad digital</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de cumplimiento legal</h2>
+    <ul>
+        <li>Gestión de las regulaciones y normativas aplicables</li>
+        <li>Ejemplo: Cumplimiento de la Ley General de Protección de Datos (LGPD)</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de crisis</h2>
+    <ul>
+        <li>Programación de respuestas ante situaciones imprevistas</li>
+        <li>Ejemplo: Manejo de crisis publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de oportunidades</h2>
+    <ul>
+        <li>Identificación y aprovechamiento de oportunidades en el mercado</li>
+        <li>Ejemplo: Campañas publicitarias basadas en tendencias emergentes</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de colaboraciones</h2>
+    <ul>
+        <li>Programación de acuerdos y colaboraciones estratégicas</li>
+        <li>Ejemplo: Alianzas publicitarias con influencers</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de KPIs</h2>
+    <ul>
+        <li>Monitoreo y análisis de los indicadores clave de rendimiento</li>
+        <li>Ejemplo: Seguimiento del ROI de las campañas publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de feedback</h2>
+    <ul>
+        <li>Recopilación y análisis del feedback de los clientes y el público en general</li>
+        <li>Ejemplo: Análisis de opiniones en redes sociales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de tendencias</h2>
+    <ul>
+        <li>Monitoreo y análisis de las tendencias del mercado y la industria</li>
+        <li>Ejemplo: Análisis de tendencias en publicidad digital</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de competidores</h2>
+    <ul>
+        <li>Monitoreo y análisis del comportamiento de los competidores</li>
+        <li>Ejemplo: Análisis de estrategias publicitarias de rivales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de medios</h2>
+    <ul>
+        <li>Monitoreo y análisis del rendimiento de los canales de difusión</li>
+        <li>Ejemplo: Análisis de métricas en publicidad en línea</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de recursos</h2>
+    <ul>
+        <li>Monitoreo y análisis del uso de los recursos disponibles</li>
+        <li>Ejemplo: Análisis del rendimiento del presupuesto publicitario</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de cumplimiento legal</h2>
+    <ul>
+        <li>Monitoreo y análisis del cumplimiento de las regulaciones y normativas aplicables</li>
+        <li>Ejemplo: Análisis del cumplimiento de la LGPD</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de crisis</h2>
+    <ul>
+        <li>Monitoreo y análisis de las respuestas ante situaciones imprevistas</li>
+        <li>Ejemplo: Análisis del manejo de crisis publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de oportunidades</h2>
+    <ul>
+        <li>Monitoreo y análisis de las oportunidades en el mercado</li>
+        <li>Ejemplo: Análisis de oportunidades publicitarias basadas en tendencias emergentes</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de colaboraciones</h2>
+    <ul>
+        <li>Monitoreo y análisis de las acuerdos y colaboraciones estratégicas</li>
+        <li>Ejemplo: Análisis del rendimiento de alianzas publicitarias con influencers</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de KPIs</h2>
+    <ul>
+        <li>Monitoreo y análisis de los indicadores clave de rendimiento</li>
+        <li>Ejemplo: Análisis del ROI de las campañas publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de feedback</h2>
+    <ul>
+        <li>Recopilación y análisis del feedback de los clientes y el público en general</li>
+        <li>Ejemplo: Análisis de opiniones en redes sociales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de tendencias</h2>
+    <ul>
+        <li>Monitoreo y análisis de las tendencias del mercado y la industria</li>
+        <li>Ejemplo: Análisis de tendencias en publicidad digital</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de competidores</h2>
+    <ul>
+        <li>Monitoreo y análisis del comportamiento de los competidores</li>
+        <li>Ejemplo: Análisis de estrategias publicitarias de rivales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de medios</h2>
+    <ul>
+        <li>Monitoreo y análisis del rendimiento de los canales de difusión</li>
+        <li>Ejemplo: Análisis de métricas en publicidad en línea</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de recursos</h2>
+    <ul>
+        <li>Monitoreo y análisis del uso de los recursos disponibles</li>
+        <li>Ejemplo: Análisis del rendimiento del presupuesto publicitario</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de cumplimiento legal</h2>
+    <ul>
+        <li>Monitoreo y análisis del cumplimiento de las regulaciones y normativas aplicables</li>
+        <li>Ejemplo: Análisis del cumplimiento de la LGPD</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de crisis</h2>
+    <ul>
+        <li>Monitoreo y análisis de las respuestas ante situaciones imprevistas</li>
+        <li>Ejemplo: Análisis del manejo de crisis publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de oportunidades</h2>
+    <ul>
+        <li>Monitoreo y análisis de las oportunidades en el mercado</li>
+        <li>Ejemplo: Análisis de oportunidades publicitarias basadas en tendencias emergentes</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de colaboraciones</h2>
+    <ul>
+        <li>Monitoreo y análisis de las acuerdos y colaboraciones estratégicas</li>
+        <li>Ejemplo: Análisis del rendimiento de alianzas publicitarias con influencers</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de KPIs</h2>
+    <ul>
+        <li>Monitoreo y análisis de los indicadores clave de rendimiento</li>
+        <li>Ejemplo: Análisis del ROI de las campañas publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de feedback</h2>
+    <ul>
+        <li>Recopilación y análisis del feedback de los clientes y el público en general</li>
+        <li>Ejemplo: Análisis de opiniones en redes sociales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de tendencias</h2>
+    <ul>
+        <li>Monitoreo y análisis de las tendencias del mercado y la industria</li>
+        <li>Ejemplo: Análisis de tendencias en publicidad digital</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de competidores</h2>
+    <ul>
+        <li>Monitoreo y análisis del comportamiento de los competidores</li>
+        <li>Ejemplo: Análisis de estrategias publicitarias de rivales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de medios</h2>
+    <ul>
+        <li>Monitoreo y análisis del rendimiento de los canales de difusión</li>
+        <li>Ejemplo: Análisis de métricas en publicidad en línea</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de recursos</h2>
+    <ul>
+        <li>Monitoreo y análisis del uso de los recursos disponibles</li>
+        <li>Ejemplo: Análisis del rendimiento del presupuesto publicitario</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de cumplimiento legal</h2>
+    <ul>
+        <li>Monitoreo y análisis del cumplimiento de las regulaciones y normativas aplicables</li>
+        <li>Ejemplo: Análisis del cumplimiento de la LGPD</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de crisis</h2>
+    <ul>
+        <li>Monitoreo y análisis de las respuestas ante situaciones imprevistas</li>
+        <li>Ejemplo: Análisis del manejo de crisis publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de oportunidades</h2>
+    <ul>
+        <li>Monitoreo y análisis de las oportunidades en el mercado</li>
+        <li>Ejemplo: Análisis de oportunidades publicitarias basadas en tendencias emergentes</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de colaboraciones</h2>
+    <ul>
+        <li>Monitoreo y análisis de las acuerdos y colaboraciones estratégicas</li>
+        <li>Ejemplo: Análisis del rendimiento de alianzas publicitarias con influencers</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de KPIs</h2>
+    <ul>
+        <li>Monitoreo y análisis de los indicadores clave de rendimiento</li>
+        <li>Ejemplo: Análisis del ROI de las campañas publicitarias</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de feedback</h2>
+    <ul>
+        <li>Recopilación y análisis del feedback de los clientes y el público en general</li>
+        <li>Ejemplo: Análisis de opiniones en redes sociales</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Calendario de seguimiento de tendencias</h2>
+    <ul>
+        <li>Monitoreo y análisis de las tendencias
