--- a/Segundo/Programación de servicios y procesos/001-Programación multiproceso/008-Sincronización entre procesos/101-Ejercicios/014-multinucleo.html
+++ b/Segundo/Programación de servicios y procesos/001-Programación multiproceso/008-Sincronización entre procesos/101-Ejercicios/014-multinucleo.html
@@ -477,7 +477,7 @@
 
             totalSamples += sampleData.length;
 
-            e.target.idle = true;
+            // IMMEDIATELY assign new work to keep worker busy
             if (isTracing) assignWork(e.target);
         }
 
